--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <video class="video" controls autoplay src="./lizi.avi"></video>
+        <video class="video" controls autoplay src="https://vd3.bdstatic.com/mda-pm6gxi4n1v3mag9x/sc/cae_h264/1701995807485642458/mda-pm6gxi4n1v3mag9x.mp4?v_from_s=bdapp-bdappcore-feed-nanjing"></video>
     </div>
 </body>
 
